// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests SearchBar.stories Default 1`] = `
<div>
  <div
    class="css-14zx4vh"
  >
    <div
      class="leafygreen-ui-1iyoj2o css-6lshyd"
    >
      <button
        aria-controls="select-225-menu"
        aria-describedby="select-225-description"
        aria-disabled="false"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="searchbar-select"
        class="lg-ui-button-0000 leafygreen-ui-1bkgt4w"
        data-cy="searchbar-select"
        data-testid="leafygreen-ui-select-menubutton"
        id="select-226"
        type="button"
        value="filter"
      >
        <div
          class="leafygreen-ui-v038xi"
        />
        <div
          class="leafygreen-ui-16tr4y"
        >
          <div
            class="leafygreen-ui-obh8q1"
          >
            <div
              class="lg-ui-select-menu-0000 leafygreen-ui-17aj16e"
            >
              Filter
            </div>
          </div>
          <svg
            alt=""
            aria-hidden="true"
            class="leafygreen-ui-fn50nl"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="css-1xm32e0"
    >
      <div
        class="css-xvgrqg"
      >
        <button
          aria-disabled="false"
          aria-labelledby="View search suggestions"
          class="leafygreen-ui-1xt2asn"
          data-cy="search-suggestion-button"
          tabindex="0"
          title="View search suggestions"
        >
          <div
            class="leafygreen-ui-xhlipt"
          >
            <svg
              aria-label="Bulb Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.331 8.5a5 5 0 1 0-8.612.086L5.408 11.5a1 1 0 0 0 .866.499H6.5V6a1.5 1.5 0 1 1 3 0v6h.224a1 1 0 0 0 .863-.496L12.34 8.5h-.009Z"
                fill="currentColor"
              />
              <path
                d="M7.5 6v6h1V6a.5.5 0 0 0-1 0ZM10 14v-1H6v1a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-label="Caret Down Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="css-1xm32e0"
      >
        <div
          aria-labelledby="searchbar-input"
          class="leafygreen-ui-1br9h7w css-z4vplf"
          data-lgid="lg-text_input"
        >
          <div
            class="leafygreen-ui-1iyoj2o"
          />
          <div
            class="leafygreen-ui-os8x4a"
          >
            <div
              class="leafygreen-ui-1ago99h"
            >
              <input
                aria-describedby="lg-form-field-description-229"
                aria-disabled="false"
                aria-invalid="true"
                aria-labelledby="searchbar-input"
                autocomplete="on"
                class="lg-ui-form-field-input-0000 leafygreen-ui-1ago99h"
                data-cy="searchbar-input"
                id="lg-form-field-input-230"
                placeholder="optional, regexp to search"
                required=""
                spellcheck="false"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="leafygreen-ui-15w6x3f"
          >
            <svg
              aria-hidden="true"
              class="leafygreen-ui-160ryfb"
              fill="none"
              height="16"
              role="img"
              title="Error"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M8.864 1.514a.983.983 0 0 0-1.728 0L1.122 12.539A.987.987 0 0 0 1.986 14h12.028a.987.987 0 0 0 .864-1.461L8.864 1.514ZM7 5a1 1 0 0 1 2 0v4a1 1 0 0 1-2 0V5Zm2 7a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
            <p
              class="leafygreen-ui-jvw8or"
              data-lgid="lg-form_field-error_message"
              data-testid="lg-form_field-error_message"
              id="lg-form-field-description-229"
            >
              This input needs your attention
            </p>
          </div>
        </div>
        <div
          class="css-1kijwh"
        >
          <div
            class="leafygreen-ui-cssveg css-1a9hvxo"
            data-cy="searchbar-error"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests SearchBar.stories WithSearchSuggestions 1`] = `
<div>
  <div
    class="css-14zx4vh"
  >
    <div
      class="leafygreen-ui-1iyoj2o css-6lshyd"
    >
      <button
        aria-controls="select-232-menu"
        aria-describedby="select-232-description"
        aria-disabled="false"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="searchbar-select"
        class="lg-ui-button-0000 leafygreen-ui-1bkgt4w"
        data-cy="searchbar-select"
        data-testid="leafygreen-ui-select-menubutton"
        id="select-233"
        type="button"
        value="filter"
      >
        <div
          class="leafygreen-ui-v038xi"
        />
        <div
          class="leafygreen-ui-16tr4y"
        >
          <div
            class="leafygreen-ui-obh8q1"
          >
            <div
              class="lg-ui-select-menu-0000 leafygreen-ui-17aj16e"
            >
              Filter
            </div>
          </div>
          <svg
            alt=""
            aria-hidden="true"
            class="leafygreen-ui-fn50nl"
            height="16"
            role="presentation"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8.67903 10.7962C8.45271 11.0679 8.04729 11.0679 7.82097 10.7962L4.63962 6.97649C4.3213 6.59428 4.5824 6 5.06866 6L11.4313 6C11.9176 6 12.1787 6.59428 11.8604 6.97649L8.67903 10.7962Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="css-1xm32e0"
    >
      <div
        class="css-xvgrqg"
      >
        <button
          aria-disabled="false"
          aria-labelledby="View search suggestions"
          class="leafygreen-ui-1xt2asn"
          data-cy="search-suggestion-button"
          tabindex="0"
          title="View search suggestions"
        >
          <div
            class="leafygreen-ui-xhlipt"
          >
            <svg
              aria-label="Bulb Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.331 8.5a5 5 0 1 0-8.612.086L5.408 11.5a1 1 0 0 0 .866.499H6.5V6a1.5 1.5 0 1 1 3 0v6h.224a1 1 0 0 0 .863-.496L12.34 8.5h-.009Z"
                fill="currentColor"
              />
              <path
                d="M7.5 6v6h1V6a.5.5 0 0 0-1 0ZM10 14v-1H6v1a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-label="Caret Down Icon"
              class="leafygreen-ui-a4wnk0"
              fill="none"
              height="16"
              role="img"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="css-1xm32e0"
      >
        <div
          aria-labelledby="searchbar-input"
          class="leafygreen-ui-1br9h7w css-z4vplf"
          data-lgid="lg-text_input"
        >
          <div
            class="leafygreen-ui-1iyoj2o"
          />
          <div
            class="leafygreen-ui-95c1iv"
          >
            <div
              class="leafygreen-ui-1ago99h"
            >
              <input
                aria-describedby=""
                aria-disabled="false"
                aria-invalid="false"
                aria-labelledby="searchbar-input"
                autocomplete="on"
                class="lg-ui-form-field-input-0000 leafygreen-ui-1ago99h"
                data-cy="searchbar-input"
                id="lg-form-field-input-237"
                placeholder="optional, regexp to search"
                required=""
                spellcheck="false"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="css-1kijwh"
        >
          <button
            aria-disabled="true"
            aria-label="Select plus"
            class="leafygreen-ui-beb9er"
            data-cy="searchbar-submit"
            tabindex="0"
          >
            <div
              class="leafygreen-ui-xhlipt"
            >
              <svg
                aria-label="Plus Icon"
                class=""
                fill="none"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7.5 2a1 1 0 0 0-1 1v3.5H3a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h3.5V13a1 1 0 0 0 1 1h1a1 1 0 0 0 1-1V9.5H13a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1H9.5V3a1 1 0 0 0-1-1h-1Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
